--- a/project1.html
+++ b/project1.html
@@ -29,7 +29,7 @@ iterative testing and evaluation </p>
 
     <section>
       <h2>Project Image</h2>
-      <img src="images/UTwo.PNG" alt="Screenshot of Project One" />
+      <img src="images/UTwo.png" alt="Screenshot of Project One" />
     </section>
 
     <section>
