--- a/project1.html
+++ b/project1.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>Building my own version of YouTube</h1>
+    <h1>Project 1: Building my own version of YouTube</h1>
     <nav>
       <ul>
         <li><a href="index.html">Resume</a></li>
