--- a/project2.html
+++ b/project2.html
@@ -26,7 +26,7 @@
 
     <section>
       <h2>Project Image</h2>
-      <img src="images/UTwo.png" alt="Screenshot of Project One" />
+      <img src="images/Project2.png" alt="Screenshot of Project One" />
     </section>
 
     <section>
