--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <a href="https://www.linkedin.com/in/your-linkedin-username" target="_blank" rel="noopener">LinkedIn</a>
       </p>
       <figure class="portrait">
-        <img src="images/portrait.jpg" alt="Professional portrait of Isabela Stooks" />
+        <img src="images/portrait.png" alt="Professional portrait of Isabela Stooks" />
       </figure>
     </div>
     <nav aria-label="Primary">
