--- a/project1.html
+++ b/project1.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>Project 1: Building my own version of YouTube</h1>
+    <h1>Project 1: Building a version of YouTube for a HCI Class</h1>
     <nav>
       <ul>
         <li><a href="index.html">Resume</a></li>
@@ -26,10 +26,19 @@ development, including analysis, design, development, and
 evaluation, with a focus on progressive prototypes and rapid
 iterative testing and evaluation </p>
     </section>
+    <section>
+      <h2>Description</h2>
+      <p>“The U-Two interface is a user-centric video browsing and management platform
+that reimagines the YouTube experience by minimizing dynamic clutter. It provides
+an intuitive, responsive design that allows users to quickly navigate content
+categories, manage their video playlists, and access detailed video information—all
+through a set of consistent, accessible interactive features that prioritize simplicity
+and efficient information access.”</p>
+    </section>
 
     <section>
       <h2>Project Image</h2>
-      <img src="images/UTwo.png" alt="Screenshot of Project One" />
+      <img src="images/UTwo.png" alt="Screenshot of the finshed prototype U-Two" />
     </section>
 
     <section>
