--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta charset="utf-8" >
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Isabela Stooks — Resume</title>
-  <link rel="stylesheet" href="css/styles.css" />
-  <meta name="description" content="Resume of Isabela Stooks, UCF student and aspiring Data Entry Clerk" />
+  <link rel="stylesheet" href="css/styles.css">
+  <meta name="description" content="Resume of Isabela Stooks, UCF student and aspiring Data Entry Clerk">
 </head>
 <body>
   <header>
@@ -16,7 +16,7 @@
         <a href="https://www.linkedin.com/in/your-linkedin-username" target="_blank" rel="noopener">LinkedIn</a>
       </p>
       <figure class="portrait">
-        <img src="images/portrait.jpg" alt="Professional portrait of Isabela Stooks" />
+        <img src="images/portrait.jpg" alt="Professional portrait of Isabela Stooks">
       </figure>
     </div>
     <nav aria-label="Primary">
