--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h1>Isabela Stooks</h1>
       <p class="contact">
         <a href="mailto:is810576@ucf.edu">is810576@ucf.edu</a> ·
-        <a href="https://www.linkedin.com/in/isabela-stooks-20966a387/" target="_blank" rel="noopener">LinkedIn</a>
+        <a href="https://www.linkedin.com/in/isabela-stooks-20966a387/" target="_blank" rel="noopener"class="linkedin-link">LinkedIn</a>
       </p>
       <figure class="portrait">
         <img src="images/portrait.jpg" alt="Professional portrait of Isabela Stooks">
