--- a/index.html
+++ b/index.html
@@ -24,7 +24,13 @@
         <li><a href="#objective">Objective</a></li>
         <li><a href="#education">Education</a></li>
         <li><a href="#experience">Experience</a></li>
-        <li><a href="#projects">Projects</a></li>
+       <li class="dropdown">
+      <a href="#projects">Projects</a>
+      <ul class="dropdown-menu">
+        <li><a href="project1.html">Project One</a></li>
+        <li><a href="project2.html">Project Two</a></li>
+      </ul>
+    </li>
         <li><a href="#skills">Skills</a></li>
         <li><a href="#awards">Awards</a></li>
       </ul>
