--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <main>
     <section id="objective">
       <h2>Professional Objective</h2>
-      <p>Hardworking and detail-oriented soon-to-be graduate seeking a position as a Data Entry Clerk. Dedicated to confidentiality practices and bringing outstanding communication skills to Lauderdale Pathology to ensure precise entry of patient data.</p>
+      <p>Motivated and detail-oriented Information Technology student seeking opportunities to apply skills in programming, data management, and technical support. Dedicated to leveraging strong problem-solving abilities, confidentiality practices, and communication skills to contribute effectively in professional IT environments.</p>
     </section>
 
     <section id="education">
@@ -84,7 +84,7 @@
     <section id="projects">
       <h2>Projects</h2>
       <ul>
-        <li><a href="project1.html">Project One Title</a> — one-line summary</li>
+        <li><a href="project1.html">Built my own YouTube</a> — The purpose was to learn more about user experience (UX) lifecycle development and improve an already created interface.</li>
         <li><a href="project2.html">Project Two Title</a> — one-line summary</li>
       </ul>
     </section>
