--- a/project1.html
+++ b/project1.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Project One — Isabela Stooks</title>
+  <title>U-Two Project</title>
   <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
@@ -12,7 +12,7 @@
     <nav>
       <ul>
         <li><a href="index.html">Resume</a></li>
-        <li><a href="project1.html">Project One</a></li>
+        <li><a href="project1.html">U-Two Project</a></li>
         <li><a href="project2.html">Project Two</a></li>
       </ul>
     </nav>
@@ -44,9 +44,10 @@ and efficient information access.”</p>
     <section>
       <h2>Skills Learned</h2>
       <ul>
-        <li>Skill 1</li>
-        <li>Skill 2</li>
-        <li>Skill 3</li>
+        <li>Information Architecture</li>
+        <li>Technical and Communication Skills</li>
+        <li>Rapid Iteractive Testing and Evaluation</li>
+        <li>User Research and Analysis</li>
       </ul>
     </section>
   </main>
