--- a/project1.html
+++ b/project1.html
@@ -53,7 +53,7 @@ and efficient information access.”</p>
   </main>
 
   <footer>
-    <p><a href="index.html">Back to Resume</a></p>
+    <p><a href="index.html">Back to Resume</a> color=white</p>
   </footer>
 </body>
 </html>
