--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
        <li class="dropdown">
       <a href="#projects">Projects</a>
       <ul class="dropdown-menu">
-        <li><a href="project1.html">Project One</a></li>
+        <li><a href="project1.html">U-Two Project</a></li>
         <li><a href="project2.html">Project Two</a></li>
       </ul>
     </li>
