--- a/index.html
+++ b/index.html
@@ -84,8 +84,10 @@
     <section id="projects">
       <h2>Projects</h2>
       <ul>
-        <li><a href="project1.html">Built my own YouTube</a> — The purpose was to learn more about user experience (UX) lifecycle development and improve an already created interface.</li>
-        <li><a href="project2.html">Project Two Title</a> — one-line summary</li>
+        <li><a href="project1.html">Built my own YouTube</a></li>
+        <li>To learn more about user experience (UX) lifecycle development and improve an already created interface.</li>
+        <li><a href="project2.html">Encrpt a text file with a Hill Cypher</a></li>
+        <li>To test if I understand the difference in Cyphers and can correctly encrypt it in Java.</li>
       </ul>
     </section>
 
