--- a/project2.html
+++ b/project2.html
@@ -3,17 +3,17 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Project Two — Isabela Stooks</title>
+  <title>Encrypt with Hill Cipher</title>
   <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
   <header>
-    <h1>Project 2:</h1>
+    <h1>Project 1: Building a version of YouTube for a HCI Class</h1>
     <nav>
       <ul>
         <li><a href="index.html">Resume</a></li>
-        <li><a href="project1.html">Project One</a></li>
-        <li><a href="project2.html">Project Two</a></li>
+        <li><a href="project1.html">U-Two Project</a></li>
+        <li><a href="project2.html">Encrypt with Hill Cipher</a></li>
       </ul>
     </nav>
   </header>
@@ -21,26 +21,30 @@
   <main>
     <section>
       <h2>Overview</h2>
-      <p>Objective </p>
+      <p></p>
+    </section>
+    <section>
+      <h2>Description</h2>
+      <p></p>
     </section>
 
     <section>
       <h2>Project Image</h2>
-      <img src="images/Project2.png" alt="Screenshot of Project One" />
+      <img src="images/hillCiph.png" alt="Screenshot of" />
     </section>
 
     <section>
       <h2>Skills Learned</h2>
       <ul>
-        <li>Skill 1</li>
-        <li>Skill 2</li>
-        <li>Skill 3</li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
       </ul>
     </section>
   </main>
 
   <footer>
-    <p><a href="index.html">Back to Resume</a></p>
   </footer>
 </body>
 </html>
