--- a/project2.html
+++ b/project2.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>Project 1: Building a version of YouTube for a HCI Class</h1>
+    <h1>Project 2: Writing a Program to Encrypt a text file with a Hill Cipher</h1>
     <nav>
       <ul>
         <li><a href="index.html">Resume</a></li>
