--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Isabela Stooks — Resume</title>
   <link rel="stylesheet" href="css/styles.css">
-  <meta name="description" content="Resume of Isabela Stooks, UCF student and aspiring Data Entry Clerk">
+  <meta name="description" content="Resume of Isabela Stooks, UCF student and aspiring IT analyst">
 </head>
 <body>
   <header>
@@ -28,7 +28,7 @@
       <a href="#projects">Projects</a>
       <ul class="dropdown-menu">
         <li><a href="project1.html">U-Two Project</a></li>
-        <li><a href="project2.html">Project Two</a></li>
+        <li><a href="project2.html">Encrypt with Hill Cipher</a></li>
       </ul>
     </li>
         <li><a href="#skills">Skills</a></li>
