--- a/project1.html
+++ b/project1.html
@@ -13,7 +13,7 @@
       <ul>
         <li><a href="index.html">Resume</a></li>
         <li><a href="project1.html">U-Two Project</a></li>
-        <li><a href="project2.html">Project Two</a></li>
+        <li><a href="project2.html">Encrypt with a Hill Cipher</a></li>
       </ul>
     </nav>
   </header>
