--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
       <h2>Projects</h2>
       <ul>
         <li><a href="project1.html">Built my own YouTube</a></li>
-        <li>To learn more about user experience (UX) lifecycle development and improve an already created interface.</li>
+        <p>To learn more about user experience (UX) lifecycle development and improve an already created interface.</p>
         <li><a href="project2.html">Encrpt a text file with a Hill Cypher</a></li>
-        <li>To test if I understand the difference in Cyphers and can correctly encrypt it in Java.</li>
+        <p>To test if I understand the difference in Ciphers and can correctly encrypt it in Java.</p>
       </ul>
     </section>
 
