--- a/project2.html
+++ b/project2.html
@@ -20,26 +20,25 @@
 
   <main>
     <section>
-      <h2>Overview</h2>
-      <p></p>
-    </section>
-    <section>
       <h2>Description</h2>
-      <p></p>
+      <p>The assignment was to write a program that encrypts alphabetic letters in a file using the
+Hill cipher where the Hill matrix can be any size from 2x2 up to 9x9. The program took
+two command line parameters containing the names of the file storing the encryption key and
+the file to be encrypted. The program must generate the output to the terminal screen.</p>
     </section>
 
     <section>
       <h2>Project Image</h2>
-      <img src="images/hillCiph.png" alt="Screenshot of" />
+      <img src="images/hillCiph.png" alt="A section of Java code that shows how data was encrypted" />
+      <img src="images/ciphEx.png" alt="An example of the output of ciphertext and how it started in plaintext." />
     </section>
 
     <section>
       <h2>Skills Learned</h2>
       <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>Core Programming skills such as File I/O mastery and Matrix manipulation</li>
+        <li>Cryptography and Algorithmic Thinking</li>
+        <li>Debugging Skills</li>
       </ul>
     </section>
   </main>
