--- a/index.html
+++ b/index.html
@@ -82,14 +82,18 @@
     </section>
 
     <section id="projects">
-      <h2>Projects</h2>
-      <ul>
-        <li><a href="project1.html">Built my own YouTube</a></li>
-        <p>To learn more about user experience (UX) lifecycle development and improve an already created interface.</p>
-        <li><a href="project2.html">Encrpt a text file with a Hill Cypher</a></li>
-        <p>To test if I understand the difference in Ciphers and can correctly encrypt it in Java.</p>
-      </ul>
-    </section>
+  <h2>Projects</h2>
+  <ul>
+    <li>
+      <a href="project1.html">Built my own YouTube</a>
+      <p>To learn more about user experience (UX) lifecycle development and improve an already created interface.</p>
+    </li>
+    <li>
+      <a href="project2.html">Encrypt a text file with a Hill Cipher</a>
+      <p>To test if I understand the difference in Ciphers and can correctly encrypt it in Java.</p>
+    </li>
+  </ul>
+</section>
 
     <section id="skills">
       <h2>Skills</h2>
