--- a/project1.html
+++ b/project1.html
@@ -38,7 +38,7 @@ and efficient information access.”</p>
 
     <section>
       <h2>Project Image</h2>
-      <img src="images/UTwo.png" alt="Screenshot of the finshed prototype U-Two" />
+      <img src="images/UTwo.png" alt="Screenshot of the finshed prototype U-Two, a simplified YouTube-style interface" />
     </section>
 
     <section>
