--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     </div>
     <nav aria-label="Primary">
       <ul>
+        <li><a href="index.html" aria-current="page">Resume</a></li>
         <li><a href="#objective">Objective</a></li>
         <li><a href="#education">Education</a></li>
         <li><a href="#experience">Experience</a></li>
