--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <a href="https://www.linkedin.com/in/isabela-stooks-20966a387/" target="_blank" rel="noopener" class="linkedin-link">LinkedIn</a>
       </p>
       <figure class="portrait">
-        <img src="images/portrait.jpg" alt="Professional portrait of Isabela Stooks">
+        <img src="images/portrait.jpg" alt="A portrait of Isabela Stooks with brown hair, brown eyes, and a blue dress on">
       </figure>
     </div>
     <nav aria-label="Primary">
