--- a/project1.html
+++ b/project1.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>U-Two Project</title>
-  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
   <header>
@@ -38,7 +38,7 @@ and efficient information access.”</p>
 
     <section>
       <h2>Project Image</h2>
-      <img src="images/UTwo.png" alt="Screenshot of the finshed prototype U-Two, a simplified YouTube-style interface" />
+      <img src="images/UTwo.png" alt="Screenshot of the finshed prototype U-Two, a simplified YouTube-style interface" >
     </section>
 
     <section>
