--- a/project2.html
+++ b/project2.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Encrypt with Hill Cipher</title>
-  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
   <header>
@@ -29,8 +29,8 @@ the file to be encrypted. The program must generate the output to the terminal s
 
     <section>
       <h2>Project Image</h2>
-      <img src="images/hillCiph.png" alt="A section of Java code that shows how data was encrypted" />
-      <img src="images/ciphEx.png" alt="An example of the output of ciphertext and how it started in plaintext." />
+      <img src="images/hillCiph.png" alt="A section of Java code that shows how data was encrypted">
+      <img src="images/ciphEx.png" alt="An example of the output of ciphertext and how it started in plaintext." >
     </section>
 
     <section>
