--- a/project1.html
+++ b/project1.html
@@ -37,9 +37,13 @@ and efficient information access.”</p>
     </section>
 
     <section>
-      <h2>Project Image</h2>
-      <img src="images/UTwo.png" alt="Screenshot of the finshed prototype U-Two, a simplified YouTube-style interface" >
-    </section>
+  <h2>Project Image</h2>
+  <figure>
+    <img src="images/UTwo.png" alt="U-Two prototype interface">
+    <figcaption>Screenshot of the finished U-Two prototype, a simplified YouTube-style interface</figcaption>
+  </figure>
+</section>
+
 
     <section>
       <h2>Skills Learned</h2>
