--- a/project2.html
+++ b/project2.html
@@ -27,11 +27,19 @@ two command line parameters containing the names of the file storing the encrypt
 the file to be encrypted. The program must generate the output to the terminal screen.</p>
     </section>
 
-    <section>
-      <h2>Project Image</h2>
-      <img src="images/hillCiph.png" alt="A section of Java code that shows how data was encrypted">
-      <img src="images/ciphEx.png" alt="An example of the output of ciphertext and how it started in plaintext." >
-    </section>
+    <section aria-labelledby="project-encryption-images">
+  <h2 id="project-encryption-images">Project Images</h2>
+
+  <figure>
+    <img src="images/hillCiph.png" alt="Screenshot of Java code implementing Hill cipher encryption.">
+    <figcaption>Java code that shows the encryption process.</figcaption>
+  </figure>
+
+  <figure>
+    <img src="images/ciphEx.png" alt="Example showing plaintext transformed into ciphertext.">
+    <figcaption>Example of encryption results: plaintext converted to ciphertext.</figcaption>
+  </figure>
+</section>
 
     <section>
       <h2>Skills Learned</h2>
